--- a/Scratch.ipynb
+++ b/Scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "id": "92843a2e-bbfc-4b55-8cb0-ba41bac839cc",
    "metadata": {},
    "outputs": [],
@@ -14,10 +14,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "id": "8c5fbaf5-afcf-471c-908c-e6875bc66b2f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 1\n",
@@ -28,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "id": "27a00bbc-402d-454a-b4d6-94261f70568e",
    "metadata": {},
    "outputs": [
@@ -50,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "id": "511c2298-c10e-4643-8edf-2c13c302e549",
    "metadata": {},
    "outputs": [],
@@ -60,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "id": "6600a625-7cc5-4bf4-b2ce-2242bcc34e56",
    "metadata": {},
    "outputs": [],
@@ -71,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 38,
    "id": "cc273275-b52f-4ace-a0ec-631e7e9ffedb",
    "metadata": {},
    "outputs": [
@@ -81,7 +90,7 @@
        "\n",
        "\n",
        "     <video alt=\"test\" autoplay=1 height=400 loop>\n",
-       "        <source src=\"https://openpuppies.com/mp4/oadIW4Z.mp4\"  type=\"video/mp4\">\n",
+       "        <source src=\"https://openpuppies.com/mp4/1YraHb7.mp4\"  type=\"video/mp4\">\n",
        "    </video>\n",
        "\n",
        "        <div style=\"\n",
@@ -89,19 +98,19 @@
        "        top: 10px;\n",
        "        left: 10px;\n",
        "        background: rgba(0,0,0,0.5);\n",
-       "        color: #a3be8c;\n",
+       "        color: #bf616a;\n",
        "        font-size: 20px;\n",
        "        padding: 6px 12px;\n",
        "        border-radius: 6px;\n",
        "    \">\n",
-       "    Correct!\n",
+       "    Try Again\n",
        "    "
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,6 +123,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6fbd8ca1-73d2-4261-aff8-f9e177e11157",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ffd0d6a-4b7f-4c32-bd7f-ceb327cd7e20",
    "metadata": {},
    "outputs": [],
    "source": []
